capstone project finale with foursquare api

--- a/scripts/Neighborhoods_in_Toronto.ipynb
+++ b/scripts/Neighborhoods_in_Toronto.ipynb
@@ -2464,7 +2464,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "####  create map of Toronto using latitude and longitude values"
+    "####  create map of Boroughs that contain the wordToronto in their name using latitude and longitude values"
    ]
   },
   {
@@ -6272,7 +6272,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Creating a function to repeat the same process to all the neighborhoods in Manhattan"
+    "#### Creating a function to repeat the same process to all the neighborhoods in Toronto"
    ]
   },
   {
@@ -8630,6 +8630,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### k-means to cluster the neighborhood into 5 clusters."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 31,
    "metadata": {},
@@ -8656,6 +8663,13 @@
     "\n",
     "# check cluster labels generated for each row in the dataframe\n",
     "kmeans.labels_[0:10] "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Adding clustering labels"
    ]
   },
   {
@@ -8845,7 +8859,6 @@
     }
    ],
    "source": [
-    "# add clustering labels\n",
     "neighborhoods_venues_sorted.insert(0, 'Cluster_Labels', kmeans.labels_)\n",
     "\n",
     "toronto_merged = toronto_data\n",
@@ -8854,6 +8867,13 @@
     "toronto_merged = toronto_merged.join(neighborhoods_venues_sorted.set_index('Neighborhood'), on='Neighbourhood')\n",
     "\n",
     "toronto_merged.head() # check the last columns!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Visualizing the resulting clusters"
    ]
   },
   {
