--- a/scripts/Finale_BattleOfTheNeighborhoods.ipynb
+++ b/scripts/Finale_BattleOfTheNeighborhoods.ipynb
@@ -32,7 +32,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Data"
+    "### Data Description"
    ]
   },
   {
@@ -40,9 +40,9 @@
    "metadata": {},
    "source": [
     "For the purposes of this project, I shall make use of the following;\n",
-    "1. List of neighborhoods in Toronto scraped from https://en.wikipedia.org/wiki/List_of_postal_codes_of_Canada:_M\n",
+    "1. List of neighborhoods in Toronto scraped from https://en.wikipedia.org/wiki/List_of_postal_codes_of_Canada:_M \n",
     "2. Geographical coordinates of the neighborhoods (Latitude and longitudes) fetched from the python geocoding library\n",
-    "3. Data related to venues with African food using the Foursquare API"
+    "3. Data related to venues with African food using the Foursquare API to enable us to run clustering algorithms and to check how similar "
    ]
   },
   {
